--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master # Adjust this if your default branch is different
+    paths-ignore:
+      - 'src/utils/combinations.json'
 
 jobs:
   build:
